--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview"
     "homepage": "https://rameshyanith.github.io/portfolio",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build",
   },
   "dependencies": {
     "lucide-react": "^0.563.0",
